k8s-setup/kyverno/audit-non-compliant-res.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: audit-non-compliant-resources
spec:
  validationFailureAction: audit
  rules:
    - name: audit-non-root-users
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Containers must not run as root."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
