k8s-setup/kyverno/disallow-hostpath-volumes.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-hostpath-volumes
spec:
  rules:
    - name: validate-hostpath
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "HostPath volumes are not allowed."
        pattern:
          spec:
            volumes:
              - hostPath: null
