k8s-setup/kyverno/enforce-nonroot-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-non-root-user
spec:
  rules:
    - name: validate-non-root-user
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Containers must not run as root."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
