k8s-setup/kyverno/enforce-resource-limit.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-resource-limits
spec:
  rules:
    - name: validate-resource-limits
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "All containers must specify resource requests and limits."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
                    cpu: "?*"
