k8s-setup/kyverno/enfore-read-root-filesys.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-readonly-root-filesystem
spec:
  rules:
    - name: enforce-readonly
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Containers must set securityContext.readOnlyRootFilesystem to true."
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
