k8s-setup/kyverno/restrict-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
spec:
  rules:
    - name: validate-image-registry
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Only images from 'trusted-registry.com' are allowed."
        pattern:
          spec:
            containers:
              - image: "trusted-registry.com/*"
